Реализовано для мастера: показ и отклик на заявки, для клиента: выбор мастера. Добавлена новая таблица State. Добавлен файл data.sql для добавления стартовых значений для таблиц types, states, powers.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/kfclimat_db
 spring.datasource.username=master
 spring.datasource.password=masterkey
+spring.sql.init.data-locations=classpath:/data.sql
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
